fixing HTML5 (c'est capricieux, cette petite bête-là...)

--- a/src/main/webapp/html/tatami.html
+++ b/src/main/webapp/html/tatami.html
@@ -63,14 +63,14 @@
 					<thead>
 						<tr>
 							<td align="center"><img id="picture" src="../images/julien-dubois.jpg" width="50" /></td>
-							<td colspan="2"><h2><span id="firstName" /> <span id="lastName" /></h2></td>
+							<td colspan="2"><h2><span id="firstName"></span> <span id="lastName"></span></h2></td>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td><span id="tweetCount" class="label" /><br/>TWEETS</td>
-							<td><span id="friendsCount" class="label" /><br/>ABONNEMENTS</td>
-							<td><span id="followersCount" class="label" /><br/>ABONN&Eacute;S</td>
+							<td><span id="tweetCount" class="label"></span><br/>TWEETS</td>
+							<td><span id="friendsCount" class="label"></span><br/>ABONNEMENTS</td>
+							<td><span id="followersCount" class="label"></span><br/>ABONN&Eacute;S</td>
 						</tr>
 					</tbody>
 					<tfoot>
@@ -100,7 +100,7 @@
 									<thead>
 										<tr>
 											<th colspan="2"><h2>Tweets</h2></th>
-											<th colspan="2" align="right"><a href="javascript:listTweets()" title="Rafra&icirc;chir"><i class="icon-repeat icon-white" /></a></th>
+											<th colspan="2" align="right"><a href="javascript:listTweets()" title="Rafra&icirc;chir"><i class="icon-repeat icon-white"></i></a></th>
 										</tr>
 									</thead>
 									<tbody id="tweetsList" style="color:black"></tbody>
@@ -129,8 +129,6 @@
 			</div>
 		</div>
 	</div>
-
-	</div> <!-- /container -->
 
 	<!-- Le javascript
 	================================================== -->
