formulaire de maj du profil utilisateur

--- a/src/main/webapp/html/tatami.html
+++ b/src/main/webapp/html/tatami.html
@@ -40,7 +40,7 @@
 					<ul class="nav">
 						<li class="active"><a href="#">Home</a></li>
 						<li><a href="#about">About</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="profile.html">Profil</a></li>
 					</ul>
 					<ul class="nav pull-right">
 						<li class="divider-vertical"></li>
@@ -78,7 +78,7 @@
 							<td colspan="3">
 								<form class="form-inline">
 									<textarea id="content" class="focused" placeholder="Composez un nouveau tweet..." maxlength="140"></textarea>
-									<button onclick="javascript:tweet();return false;" type="submit" class="btn btn-primary">Tweeter</button>
+									<button onclick="javascript:tweet();return false" type="submit" class="btn btn-primary">Tweeter</button>
 								</form>
 							</td>
 						<tr>
