Bug sur le login dans le template

--- a/src/main/webapp/assets/templates_mustache/templates.html
+++ b/src/main/webapp/assets/templates_mustache/templates.html
@@ -17,7 +17,7 @@
 		<article>
 			{{&userlineLink}}
 			{{firstName}}&nbsp;{{lastName}}
-			{{#userlineLink}}</a>{{/userlineLink}}&nbsp;<em>@{{userLogin}}</em><br/>
+			{{#userlineLink}}</a>{{/userlineLink}}&nbsp;<em>@{{login}}</em><br/>
 			{{content}}
 		</article>
 	</td>
