Utilisation de la triple mustache pour le contenu des tweets

--- a/src/main/webapp/assets/templates_mustache/templates.html
+++ b/src/main/webapp/assets/templates_mustache/templates.html
@@ -18,7 +18,7 @@
 			{{&userlineLink}}
 			{{firstName}}&nbsp;{{lastName}}
 			{{#userlineLink}}</a>{{/userlineLink}}&nbsp;<em>@{{login}}</em><br/>
-			{{content}}
+			{{{content}}}
 		</article>
 	</td>
 
