Correction bug UI sur les favoris

--- a/src/main/webapp/assets/templates_mustache/templates.html
+++ b/src/main/webapp/assets/templates_mustache/templates.html
@@ -25,7 +25,7 @@
 	<!-- actions -->
 	<td class='tweetActions'>
 		<div class='hide {{tweetId}}-actions'>
-			<a id='{{tweetId}}-favorite' href='#' title='Favorite'></a>
+			<a href='#' class='{{tweetId}}-favorite' title='Favorite'></a>
 			{{#isUserLogin}}
 				<a href='#' onclick='removeTweet("{{tweetId}}")' title='Remove'>
 					<i class='icon-remove' />
