--- a/src/main/webapp/assets/templates_mustache/templates.html
+++ b/src/main/webapp/assets/templates_mustache/templates.html
@@ -5,65 +5,72 @@
         onmouseout='hideActions("{{statusId}}")'>
 
         <!-- avatar -->
-        <td class='avatar'>
+        <td class="avatar">
             {{&userlineLink}}
             <img src='http://www.gravatar.com/avatar/{{gravatar}}?s=32'/>
             {{#userlineLink}}</a>{{/userlineLink}}
-            {{^userlineLink}}
-        </td>
-        {{/userlineLink}}
-
-        <!-- status content -->
-        <td>
-            <article>
-                {{&userlineLink}}
-                {{firstName}}&nbsp;{{lastName}}
-                {{#userlineLink}}</a>{{/userlineLink}}&nbsp;<em>@{{login}}</em><br/>
-                {{{content}}}
-            </article>
         </td>
 
-        <!-- actions -->
-        <td class='statusActions'>
-            <div class='hide {{statusId}}-actions'>
-                {{#favorite}}
-                <a href='#' class='{{statusId}}-favorite'
-                   title='Favorite'
-                   onclick='unfavoriteStatus("{{statusId}}")'>
+        <td class="statusDisplay">
+            <div class="row-fluid">
+                <div class="span8">
+                    {{&userlineLink}}
+                    {{firstName}}&nbsp;{{lastName}}
+                    {{#userlineLink}} {{/userlineLink}}&nbsp;<em>@{{login}}</em></a>
+                </div>
+                <!-- actions -->
+                <div class="span4">
+                    <div class='hide {{statusId}}-actions'>
+                        <a href='/tatami/{{login}}/status/{{statusId}}'
+                           title='Open status'>
 
-                    <i class='icon-star-empty'/>
-                </a>
-                {{/favorite}}
-                {{^favorite}}
-                <a href='#' class='{{statusId}}-favorite'
-                   title='Unfavorite'
-                   onclick='favoriteStatus("{{statusId}}")'>
+                            <i class='icon-eye-open'/>
+                        </a>
+                        {{#favorite}}
+                        <a href='#' class='{{statusId}}-favorite'
+                           title='Favorite'
+                           onclick='unfavoriteStatus("{{statusId}}")'>
 
-                    <i class='icon-star'/>
-                </a>
-                {{/favorite}}
-                {{#isUserLogin}}
-                <a href='#' onclick='removeStatus("{{statusId}}")' title='Remove'>
-                    <i class='icon-remove'/>
-                </a>
-                {{/isUserLogin}}
+                            <i class='icon-star-empty'/>
+                        </a>
+                        {{/favorite}}
+                        {{^favorite}}
+                        <a href='#' class='{{statusId}}-favorite'
+                           title='Unfavorite'
+                           onclick='favoriteStatus("{{statusId}}")'>
+
+                            <i class='icon-star'/>
+                        </a>
+                        {{/favorite}}
+                        {{#isUserLogin}}
+                        <a href='#' onclick='removeStatus("{{statusId}}")' title='Remove'>
+                            <i class='icon-remove'/>
+                        </a>
+                        {{/isUserLogin}}
+                    </div>
+                </div>
+            </div>
+            <div class="row-fluid">
+                <div class="span12">
+                    <!-- status content -->
+                    <article>
+                        {{{content}}}
+                    </article>
+                </div>
             </div>
         </td>
-
-        <!-- status date -->
-        {{#favorite}}
-        <td class='statusDate favorite'>
-            <aside>
-                {{prettyPrintStatusDate}}
-            </aside>
+        <td>
+            <!-- status date -->
+            {{#favorite}}
+            <div class="statusDate favorite">
+                    {{prettyPrintStatusDate}}
+            </div>
+            {{/favorite}}
+            {{^favorite}}
+            <div class="statusDate">
+                    {{prettyPrintStatusDate}}
+            </div>
+            {{/favorite}}
         </td>
-        {{/favorite}}
-        {{^favorite}}
-        <td class='statusDate'>
-            <aside>
-                {{prettyPrintStatusDate}}
-            </aside>
-        </td>
-        {{/favorite}}
     </tr>
 </script>
