Temporary version : first multi enterprise refactorings

--- a/src/main/webapp/assets/templates_mustache/templates.html
+++ b/src/main/webapp/assets/templates_mustache/templates.html
@@ -16,12 +16,12 @@
                 <div class="span8">
                     {{&userlineLink}}
                     {{firstName}}&nbsp;{{lastName}}
-                    {{#userlineLink}} {{/userlineLink}}&nbsp;<em>@{{login}}</em></a>
+                    {{#userlineLink}} {{/userlineLink}}&nbsp;<em>@{{username}}</em></a>
                 </div>
                 <!-- actions -->
                 <div class="span4">
                     <div class='hide {{statusId}}-actions'>
-                        <a href='/tatami/{{login}}/status/{{statusId}}'
+                        <a href='/tatami/{{username}}/status/{{statusId}}'
                            title='Open status'>
 
                             <i class='icon-eye-open'/>
