Corrected https://github.com/ippontech/tatami/issues/106

--- a/src/main/webapp/assets/templates_mustache/templates.html
+++ b/src/main/webapp/assets/templates_mustache/templates.html
@@ -42,11 +42,11 @@
                             <i class='icon-star'/>
                         </a>
                         {{/favorite}}
-                        {{#isUserLogin}}
+                        {{#isUserName}}
                         <a href='#' onclick='removeStatus("{{statusId}}")' title='Remove'>
                             <i class='icon-remove'/>
                         </a>
-                        {{/isUserLogin}}
+                        {{/isUserName}}
                     </div>
                 </div>
             </div>
