renamed files and directories for AngularJS code

--- a/src/main/webapp/Timeline/Timeline.html
+++ b/src/main/webapp/Timeline/Timeline.html
@@ -26,6 +26,7 @@
             </div>
             <section class="tatams-container">
                 <div>
+                    <!-- Need to use a service along with the controller in the future? -->
                     <section class="timeline" ng-controller="TimelineController">
                         <div class="tatams" ng-repeat="tatam in tatams">
                             <div class="tatam pointer discussion tatam-border-lr tatam-hover tatam-id-{{ tatam.statusId }}" style="display: block;">
