Buttons on modal now can be clicked, modalInstance is available to StatusCreateController, even though an error occurs when injecting it

--- a/src/main/webapp/app/shared/topmenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuView.html
@@ -175,7 +175,7 @@
                     </ul>
                 </li>
                 <li class="hidden-phone" ng-controller="StatusManagerController">
-                    <button class="btn btn-primary navbar-form" ng-click="openStatusModal()">
+                    <button class="btn btn-primary navbar-form" ng-click="showModal()">
                         <i class="glyphicon glyphicon-pencil"></i>
                         <span translate="tatami.menu.post" class="visible-desktop"></span>
                     </button>
