renamed HomeView to TimelineView

--- a/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
@@ -5,7 +5,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/tatami/home">
+        <a class="navbar-brand" href="/">
             <img alt="{{ 'tatami.menu.logo' | translate }}" title="{{ 'tatami.menu.logo' | translate }}" src="/img/company-logo.png">
             <span translate="tatami.menu.title"></span>
         </a>
@@ -17,11 +17,12 @@
         <div class="nav-collapse navbar-responsive-collapse collapse">
             <ul class="nav">
                 <li>
+                    <!-- UPDATE THE TIMELINE LINK HERE -->
                     <!--<c:if test="${currentPage != null && currentPage == 'home'}">-->
-                        <a href="#/home/timeline">
+                        <a href="/timeline">
                     <!--</c:if>-->
                     <!--<c:if test="${currentPage == null || currentPage != 'home'}">
-                        <a href="/tatami/home/timeline">
+                        <a href="/">
                     </c:if>-->
                     <span>
                         <span class="glyphicon glyphicon-th-list"></span>
