--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
     <![endif]-->
     <!--<link href="/css/vendor/css/jQueryjGrowl.css" rel="stylesheet">-->
 
-    <!-- Needed to use relative links with HTML5 History API (Angular routing) -->
+    <!-- Needed if using HTML5 History API and relative links (Angular routing) -->
     <base href="/">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
