disabled HTML5 History API, fixed timeline routing

--- a/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
@@ -19,7 +19,7 @@
                 <li>
                     <!-- UPDATE THE TIMELINE LINK HERE -->
                     <!--<c:if test="${currentPage != null && currentPage == 'home'}">-->
-                        <a href="/timeline">
+                        <a href="#/home/timeline">
                     <!--</c:if>-->
                     <!--<c:if test="${currentPage == null || currentPage != 'home'}">
                         <a href="/">
