top menu now hides search bar, account, and post button on certain pages

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -62,7 +62,7 @@
 
 </head>
 
-<body ng-app="TatamiApp">
+<body ng-init="showSearchAccountPost = false" ng-app="TatamiApp">
     <ng-view></ng-view>
 
     <!-- Begin Footer -->
