--- a/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <img alt="{{ 'tatami.menu.logo' | translate }}" title="{{ 'tatami.menu.logo' | translate }}" src="/img/company-logo.png">
+            <img alt="{{ 'tatami.menu.logo' | translate }}" title="{{ 'tatami.menu.logo' | translate }}" src="/assets/img/company-logo.png">
             <span translate="tatami.menu.title"></span>
         </a>
     <!--<c:if test="${currentPage != null && currentPage == 'home'}">-->
@@ -17,7 +17,6 @@
         <div class="nav-collapse navbar-responsive-collapse collapse">
             <ul class="nav">
                 <li>
-                    <!-- UPDATE THE TIMELINE LINK HERE -->
                     <!--<c:if test="${currentPage != null && currentPage == 'home'}">-->
                         <a href="#/home/timeline">
                     <!--</c:if>-->
@@ -40,13 +39,13 @@
                     </a>
                     <ul class="dropdown-menu closed">
                         <li>
-                            <a href="/tatami/presentation">
+                            <a href="#/about">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span translate="tatami.menu.about.presentation"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="/tatami/tos">
+                            <a href="#/tos">
                                 <span class="glyphicon glyphicon-briefcase"></span>
                                 <span translate="tatami.menu.about.tos"></span>
                             </a>
@@ -67,7 +66,7 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="/tatami/license">
+                            <a href="#/license">
                                 <span class="glyphicon glyphicon-info-sign"></span>
                                 <span translate="tatami.menu.about.license"></span>
                             </a>
@@ -108,99 +107,101 @@
             </ul>
             <!--<c:if test="${currentPage != null && currentPage == 'home'}">-->
             <!--<sec:authorize ifAnyGranted="ROLE_USER">-->
-            <ul class="nav pull-right">
-                <li class="dropdown pointer">
-                    <a class="dropdown-toggle" data-toggle="dropdown">
-                    <span>
-                        <span class="glyphicon glyphicon-user"></span>
-                        <span translate="tatami.menu.account.account" class="hidden-tablet"></span>
-                        <b class="caret"></b>
-                    </span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="/tatami/account/#/profile">
-                                <span class="glyphicon glyphicon-user"></span>
-                                <span translate="tatami.menu.account.profile"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/tatami/account/#/preferences">
-                                <span class="glyphicon glyphicon-picture"></span>
-                                <span translate="tatami.menu.account.preferences"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/tatami/account/#/password">
-                                <span class="glyphicon glyphicon-lock"></span>
-                                <span translate="tatami.menu.account.password"></span>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="/tatami/account/#/files">
-                                <span class="glyphicon glyphicon-file"></span>
-                                <span translate="tatami.menu.account.files"></span>
-                            </a>
-                            <a href="/tatami/account/#/users">
-                                <span class="glyphicon glyphicon-globe"></span>
-                                <span translate="tatami.menu.account.users"></span>
-                            </a>
-                            <a href="/tatami/account/#/groups">
-                                <span class="glyphicon glyphicon-th-large"></span>
-                                <span translate="tatami.menu.account.groups"></span>
-                            </a>
-                            <a href="/tatami/account/#/tags">
-                                <span class="glyphicon glyphicon-tags"></span>
-                                <span translate="tatami.menu.account.tags"></span>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="/tatami/account/#/status_of_the_day">
-                                <span class="glyphicon glyphicon-signal"></span>
-                                <span translate="tatami.menu.account.sotd"></span>
-                            </a>
-                            <a href="/tatami/home#company">
-                                <span class="glyphicon glyphicon-briefcase"></span>
-                                <span translate="tatami.menu.account.companywall"></span>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="/tatami/logout">
-                                <span class="glyphicon glyphicon-off"></span>
-                                <span translate="tatami.menu.account.logout"></span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="hidden-phone" ng-controller="StatusManagerController">
-                    <button class="btn btn-primary navbar-form" ng-click="showModal()">
-                        <i class="glyphicon glyphicon-pencil"></i>
-                        <span translate="tatami.menu.post" class="visible-desktop"></span>
-                    </button>
-                </li>
-            </ul>
-            <ul class="nav pull-right">
-                <li>
-                    <a href="#" id="help-tour">
+            <div ng-show="showSearchAccountPost">
+                <ul class="nav pull-right">
+                    <li class="dropdown pointer">
+                        <a class="dropdown-toggle" data-toggle="dropdown">
                         <span>
-                            <span class="glyphicon glyphicon-question-sign"></span>
-                            <span translate="tatami.menu.help" class="hidden-tablet"></span>
+                            <span class="glyphicon glyphicon-user"></span>
+                            <span translate="tatami.menu.account.account" class="hidden-tablet"></span>
+                            <b class="caret"></b>
                         </span>
-                    </a>
-                </li>
-            </ul>
-            <form id="searchform" class="navbar-form pull-right col-span-4" action="">
-                <input name="search" type="text" class="col-span-12" id="searchinput" autocomplete="off" placeholder="{{ 'tatami.menu.search' | translate }}">
-                
-                <!-- Clear search field when clicking the x icon ? -->
-                <!-- Probably should just remove it -->
-                <span class="deleteicon" style="display: none;">
-                    <i class="glyphicon glyphicon-remove-sign"></i>
-                </span>
-            </form>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="/tatami/account/#/profile">
+                                    <span class="glyphicon glyphicon-user"></span>
+                                    <span translate="tatami.menu.account.profile"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/tatami/account/#/preferences">
+                                    <span class="glyphicon glyphicon-picture"></span>
+                                    <span translate="tatami.menu.account.preferences"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/tatami/account/#/password">
+                                    <span class="glyphicon glyphicon-lock"></span>
+                                    <span translate="tatami.menu.account.password"></span>
+                                </a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="/tatami/account/#/files">
+                                    <span class="glyphicon glyphicon-file"></span>
+                                    <span translate="tatami.menu.account.files"></span>
+                                </a>
+                                <a href="/tatami/account/#/users">
+                                    <span class="glyphicon glyphicon-globe"></span>
+                                    <span translate="tatami.menu.account.users"></span>
+                                </a>
+                                <a href="/tatami/account/#/groups">
+                                    <span class="glyphicon glyphicon-th-large"></span>
+                                    <span translate="tatami.menu.account.groups"></span>
+                                </a>
+                                <a href="/tatami/account/#/tags">
+                                    <span class="glyphicon glyphicon-tags"></span>
+                                    <span translate="tatami.menu.account.tags"></span>
+                                </a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="/tatami/account/#/status_of_the_day">
+                                    <span class="glyphicon glyphicon-signal"></span>
+                                    <span translate="tatami.menu.account.sotd"></span>
+                                </a>
+                                <a href="/tatami/home#company">
+                                    <span class="glyphicon glyphicon-briefcase"></span>
+                                    <span translate="tatami.menu.account.companywall"></span>
+                                </a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="/tatami/logout">
+                                    <span class="glyphicon glyphicon-off"></span>
+                                    <span translate="tatami.menu.account.logout"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="hidden-phone" ng-controller="StatusManagerController">
+                        <button class="btn btn-primary navbar-form" ng-click="showModal()">
+                            <i class="glyphicon glyphicon-pencil"></i>
+                            <span translate="tatami.menu.post" class="visible-desktop"></span>
+                        </button>
+                    </li>
+                </ul>
+                <ul class="nav pull-right">
+                    <li>
+                        <a href="#" id="help-tour">
+                            <span>
+                                <span class="glyphicon glyphicon-question-sign"></span>
+                                <span translate="tatami.menu.help" class="hidden-tablet"></span>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+                <form id="searchform" class="navbar-form pull-right col-span-4" action="">
+                    <input name="search" type="text" class="col-span-12" id="searchinput" autocomplete="off" placeholder="{{ 'tatami.menu.search' | translate }}">
+                    
+                    <!-- Clear search field when clicking the x icon ? -->
+                    <!-- Probably should just remove it -->
+                    <span class="deleteicon" style="display: none;">
+                        <i class="glyphicon glyphicon-remove-sign"></i>
+                    </span>
+                </form>
+            <div>
             <!--</sec:authorize>-->
             <!--</c:if>-->
         </div>
