changed "About" back to "Presentation"

--- a/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
@@ -39,7 +39,7 @@
                     </a>
                     <ul class="dropdown-menu closed">
                         <li>
-                            <a href="#/about">
+                            <a href="#/presentation">
                                 <span class="glyphicon glyphicon-eye-open"></span>
                                 <span translate="tatami.menu.about.presentation"></span>
                             </a>
