--- a/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
@@ -25,7 +25,7 @@
                     </c:if>-->
                     <span>
                         <span class="glyphicon glyphicon-th-list"></span>
-                        <span translate="tatami.timeline" class="hidden-tablet"></span>
+                        <span translate="tatami.home.timeline" class="hidden-tablet"></span>
                     </span>
                     </a>
                 </li>
@@ -33,7 +33,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown">
                     <span>
                         <span class="glyphicon glyphicon-info-sign"></span>
-                        <span translate="tatami.menu.about.about" class="hidden-tablet"></span>
+                        <span translate="tatami.menu.about.title" class="hidden-tablet"></span>
                         <b class="caret"></b>
                     </span>
                     </a>
@@ -41,7 +41,7 @@
                         <li>
                             <a href="#/presentation">
                                 <span class="glyphicon glyphicon-eye-open"></span>
-                                <span translate="tatami.menu.about.presentation"></span>
+                                <span translate="tatami.presentation.title"></span>
                             </a>
                         </li>
                         <li>
@@ -113,57 +113,57 @@
                         <a class="dropdown-toggle" data-toggle="dropdown">
                         <span>
                             <span class="glyphicon glyphicon-user"></span>
-                            <span translate="tatami.menu.account.account" class="hidden-tablet"></span>
+                            <span translate="tatami.menu.account.title" class="hidden-tablet"></span>
                             <b class="caret"></b>
                         </span>
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="/tatami/account/#/profile">
+                                <a href="#/account/profile">
                                     <span class="glyphicon glyphicon-user"></span>
-                                    <span translate="tatami.menu.account.profile"></span>
+                                    <span translate="tatami.profile.title"></span>
                                 </a>
                             </li>
                             <li>
-                                <a href="/tatami/account/#/preferences">
+                                <a href="#/account/preferences">
                                     <span class="glyphicon glyphicon-picture"></span>
-                                    <span translate="tatami.menu.account.preferences"></span>
+                                    <span translate="tatami.preferences.title"></span>
                                 </a>
                             </li>
                             <li>
-                                <a href="/tatami/account/#/password">
+                                <a href="#/account/password">
                                     <span class="glyphicon glyphicon-lock"></span>
-                                    <span translate="tatami.menu.account.password"></span>
+                                    <span translate="tatami.password.title"></span>
                                 </a>
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="/tatami/account/#/files">
+                                <a href="#/account/files">
                                     <span class="glyphicon glyphicon-file"></span>
-                                    <span translate="tatami.menu.account.files"></span>
+                                    <span translate="tatami.files.title"></span>
                                 </a>
-                                <a href="/tatami/account/#/users">
+                                <a href="#/account/users">
                                     <span class="glyphicon glyphicon-globe"></span>
-                                    <span translate="tatami.menu.account.users"></span>
+                                    <span translate="tatami.users.title"></span>
                                 </a>
-                                <a href="/tatami/account/#/groups">
+                                <a href="#/account/groups">
                                     <span class="glyphicon glyphicon-th-large"></span>
-                                    <span translate="tatami.menu.account.groups"></span>
+                                    <span translate="tatami.groups.title"></span>
                                 </a>
-                                <a href="/tatami/account/#/tags">
+                                <a href="#/account/tags">
                                     <span class="glyphicon glyphicon-tags"></span>
-                                    <span translate="tatami.menu.account.tags"></span>
+                                    <span translate="tatami.tags.title"></span>
                                 </a>
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="/tatami/account/#/status_of_the_day">
+                                <a href="#/account/sotd">
                                     <span class="glyphicon glyphicon-signal"></span>
-                                    <span translate="tatami.menu.account.sotd"></span>
+                                    <span translate="tatami.sotd.title"></span>
                                 </a>
-                                <a href="/tatami/home#company">
+                                <a href="#/home/company">
                                     <span class="glyphicon glyphicon-briefcase"></span>
-                                    <span translate="tatami.menu.account.companywall"></span>
+                                    <span translate="tatami.menu.account.companyWall"></span>
                                 </a>
                             </li>
                             <li class="divider"></li>
@@ -178,7 +178,7 @@
                     <li class="hidden-phone" ng-controller="StatusManagerController">
                         <button class="btn btn-primary navbar-form" ng-click="showModal()">
                             <i class="glyphicon glyphicon-pencil"></i>
-                            <span translate="tatami.menu.post" class="visible-desktop"></span>
+                            <span translate="tatami.post.button" class="visible-desktop"></span>
                         </button>
                     </li>
                 </ul>
