--- a/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
@@ -119,7 +119,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="/tatami/account/#/profile">
+                            <a href="#/tatami/account/profile">
                                 <span class="glyphicon glyphicon-user"></span>
                                 <span translate="tatami.menu.account.profile"></span>
                             </a>
