fixed hover text not showing on some modal icons

--- a/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">
-            <img alt="{{ 'tatami.menu.logo' | translate }}" title="{{ 'tatami.menu.logo' | translate }}" src="/assets/img/company-logo.png">
+            <img title="{{ 'tatami.menu.logo' | translate }}" src="/assets/img/company-logo.png">
             <span translate="tatami.menu.title"></span>
         </a>
     <!--<c:if test="${currentPage != null && currentPage == 'home'}">-->
