fixed some translation keys

--- a/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
@@ -68,7 +68,7 @@
                         <li>
                             <a href="#/license">
                                 <span class="glyphicon glyphicon-info-sign"></span>
-                                <span translate="tatami.menu.about.license"></span>
+                                <span translate="tatami.license.title"></span>
                             </a>
                         </li>
                         <li>
