start refactoring of profile sidebar

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -93,7 +93,7 @@
     <!-- Home Module -->
     <script src="/app/components/home/HomeController.js"></script>
 
-    <!-- Sidebar View -->
+    <!-- Home Sidebar View -->
     <script src="/app/components/home/sidebar/SidebarModule.js"></script>
     <script src="/app/components/home/sidebar/ProfileController.js"></script>
     <script src="/app/components/home/sidebar/GroupsController.js"></script>
@@ -103,6 +103,10 @@
     <!-- Timeline View -->
     <script src="/app/components/home/timeline/TimelineModule.js"></script>
     <script src="/app/components/home/timeline/TimelineService.js"></script>
+
+    <!-- Profile Sidebar View -->
+    <script src="/app/components/profile/sidebar/ProfileSidebarModule.js"></script>
+    <script src="/app/components/profile/sidebar/ProfileSidebarController.js"></script>
 
     <!-- Account Module -->
     <script src="/app/components/account/AccountController.js"></script>
