Switched from built in routing to ui-routing

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -63,7 +63,7 @@
 </head>
 
 <body ng-init="showSearchAccountPost = false" ng-app="TatamiApp">
-    <ng-view></ng-view>
+    <div ui-view></div>
 
     <!-- Begin Footer -->
 
@@ -71,6 +71,8 @@
     <script src="/assets/bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
     <script src="/assets/bower_components/angular/angular.js"></script>
     <script src="/assets/bower_components/ng-file-upload/angular-file-upload.js"></script>
+
+    <script src="/assets/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
     <script src="/assets/bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="/assets/bower_components/angular-resource/angular-resource.js"></script>
