Changed the state configuration so account.groups is the parent of account.groups.list, account.groups.recommended, account.groups.search, and account.groups.manage

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -90,6 +90,8 @@
     <script src="/app/components/home/HomeModule.js"></script>
     <script src="/app/components/account/AccountModule.js"></script>
 
+    <script src="/app/components/account/FormController.js"></script>
+
     <!------------------------------------------------------------------------->
     <!-- Home Module -->
     <script src="/app/components/home/HomeController.js"></script>
