Fixed issue with group searching.

--- a/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuPartial.html
@@ -121,45 +121,45 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#/account/profile">
+                                <a ui-sref="account.profile">
                                     <span class="glyphicon glyphicon-user"></span>
                                     <span translate="tatami.profile.title"></span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#/account/preferences">
+                                <a ui-sref="account.preferences">
                                     <span class="glyphicon glyphicon-picture"></span>
                                     <span translate="tatami.preferences.title"></span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#/account/password">
+                                <a ui-sref="account.password">
                                     <span class="glyphicon glyphicon-lock"></span>
                                     <span translate="tatami.password.title"></span>
                                 </a>
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="#/account/files">
+                                <a ui-sref="account.files"
                                     <span class="glyphicon glyphicon-file"></span>
                                     <span translate="tatami.files.title"></span>
                                 </a>
-                                <a href="#/account/users">
+                                <a ui-sref="account.users">
                                     <span class="glyphicon glyphicon-globe"></span>
                                     <span translate="tatami.users.title"></span>
                                 </a>
-                                <a href="#/account/groups">
+                                <a ui-sref="account.groups">
                                     <span class="glyphicon glyphicon-th-large"></span>
                                     <span translate="tatami.groups.title"></span>
                                 </a>
-                                <a href="#/account/tags">
+                                <a ui-sref="account.tags">
                                     <span class="glyphicon glyphicon-tags"></span>
                                     <span translate="tatami.tags.title"></span>
                                 </a>
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="#/account/sotd">
+                                <a ui-sref="account.sotd">
                                     <span class="glyphicon glyphicon-signal"></span>
                                     <span translate="tatami.sotd.title"></span>
                                 </a>
