--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -175,6 +175,9 @@
     <script src="/app/shared/services/UserService.js"></script>
     <script src="/app/shared/services/SearchService.js"></script>
 
+    <!-- Install with bower -->
+    <script src="/js/vendor/OpenLayers.js"></script>
+
     <!-- End Footer -->
 </body>
 </html>
